fix time frame buttons dark mode

--- a/client/src/scss/utilities.scss
+++ b/client/src/scss/utilities.scss
@@ -49,3 +49,7 @@
 .border-grey {
   border-color: #ccc;
 }
+
+.opacity-85 {
+  opacity: 0.85 !important;
+}
